# task_manager

./: .gitattributes  .gitignore  Makefile  Procfile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pyci.yml
task_manager/: mixin.py  mixins.py  settings.py  urls.py  views.py
task_manager/api/: apps.py  serializers.py  urls.py  views.py
task_manager/fixtures/: application_users.yaml  labels.yaml  statuses.yaml  tasks.yaml
task_manager/labels/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/locale/en/LC_MESSAGES/: django.mo  django.po
task_manager/staticfiles/: staticfiles.json
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0002_tasks_labels.py
task_manager/templates/: index.html  main.html
task_manager/templates/labels/: create_label.html  delete_label.html  list_of_labels.html  update_label.html
task_manager/templates/statuses/: create_status.html  delete_status.html  list_of_statuses.html  update_status.html
task_manager/templates/tasks/: create_task.html  delete_task.html  list_of_tasks.html  update_task.html  view_task.html
task_manager/templates/users/: create_user.html  delete_user.html  list_of_users.html  sign_in.html  sign_up.html  update_user.html
task_manager/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_alter_applicationusers_options.py
